made chages to the css

--- a/server/views/contact/add.ejs
+++ b/server/views/contact/add.ejs
@@ -3,7 +3,7 @@
 <%- include ../partials/main_nav.ejs %>
 
 
-<link rel='stylesheet' href='/Content/services_page.css' />
+<link rel='stylesheet' href='/Content/title_block.css' />
 
 <!-- services page -->
 <div class="services-section">
