--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,7 +1,7 @@
 <%- include ../partials/header.ejs %>
 
 <%- include ../partials/main_nav.ejs %>
-<link rel='stylesheet' href='/Content/services_page.css' />
+<link rel='stylesheet' href='/Content/title_block.css' />
 
 <!-- services page -->
 <div class="services-section">
